# image-optimizer-cli

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/core/: processor.py  schemas.py
